src/objects/Proposal_MA_Bundle__c.object
<CustomObject>
    <description>Created for MA Tasking List.</description>
    <fields>
        <fullName>ADDITION_S_AND_OR_EXCEPTION_S__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>ADDITION(S) AND/OR EXCEPTION(S):</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Inspection_Re_Certification__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Annual Inspection &amp; Re-Certification:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Annual Inspection:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual__c</fullName>
        <label>Annual</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Burners_and_Combustions_Boilers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Burners and Combustions / Boilers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coils_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Coils Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electric_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Electric type *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Emergency_Coverage_Response__c</fullName>
        <description>Emergency Coverage Response value copied over from Proposal Product Attribute Value object.</description>
        <label>Emergency Coverage Response</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Equipment_Group__c</fullName>
        <description>Equipment Group value copied over from Proposal Line Item object.</description>
        <label>Equipment Group</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Filters_and_Belts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Filters and Belts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Generic_Tasks__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Generic Tasks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>High_efficiency_purge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>High efficiency purge *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indoor_Unit_Annual_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Indoor Unit - Annual Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Indoor_Unit_Operation_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Indoor Unit - Operation Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intelligent_Solutions_Options__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intelligent Solutions Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MA_Bundle_Item_Sequence__c</fullName>
        <label>MA Bundle Item Sequence</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Bundle_Line_Number__c</fullName>
        <label>MA Bundle Line Number</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Bundle_Name__c</fullName>
        <label>MA Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Model_Serial__c</fullName>
        <label>Manufacturer/Model/Serial</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Note__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Note</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oil_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Oil type *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Oil_type_boilers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Oil type boilers *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operational_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Operational Inspection:</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operational__c</fullName>
        <label>Operational</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outdoor_Unit_Operation_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Outdoor Unit - Operation Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Outdoor_unit_Annual_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Outdoor unit - Annual Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRE_COOLING_INSPECTION_Spring_Seasona__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>PRE-COOLING INSPECTION (Spring)- Seasona</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRE_HEATING_INSPECTION_Fall_Seasonal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>PRE-HEATING INSPECTION (Fall)- Seasonal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Perform_Seasonal_Start_up__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Perform Seasonal Start-up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predictive_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Predictive Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Preventative_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Preventative Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Propane_natural_gas_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Propane &amp; natural gas type *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Propane_natural_gas_type_boilers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Propane &amp; natural gas type boilers *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Purge_System__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Purge System*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Proposal__c</fullName>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Proposal MA Bundles</relationshipLabel>
        <relationshipName>Proposal_MA_Bundles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Seasonal_Shut_down__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the Product for the Quote/Proposal Line Item is &apos;Seasonal Shut-down&apos; then set field to 1 else 0</description>
        <label>Seasonal Shut-down</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seasonal_Start_up__c</fullName>
        <defaultValue>0</defaultValue>
        <description>If the Product for the Quote/Proposal Line Item is &apos;Seasonal Start-up&apos; then set field to 1 else 0</description>
        <label>Seasonal Start-up</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site_Location__c</fullName>
        <label>Site Location</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starter_Type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Starter Type*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steam_type__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option group</description>
        <inlineHelpText>Option group</inlineHelpText>
        <label>Steam type *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Steam_type_boilers__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Steam type boilers *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Annual_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>The Annual Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Operational_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>The Operational Inspection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Seasonal_Inspection_Fall__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Seasonal Inspection (Fall)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Seasonal_Inspection_Spring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Seasonal Inspection (Spring)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tube_Services_Condenser_Evaporator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Tube Services - (Condenser/Evaporator)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Variable_frequency_drive_s__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Variable frequency drive(s) *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Water_cooled_purge__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option Group</description>
        <inlineHelpText>Option Group</inlineHelpText>
        <label>Water cooled purge *</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X300_Point_Inspection__c</fullName>
        <defaultValue>false</defaultValue>
        <label>300 Point Inspection</label>
        <type>Checkbox</type>
    </fields>
    <label>Proposal MA Bundle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>MABundle-{0000000}</displayFormat>
        <label>Proposal MA Bundle Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal MA Bundles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>